# omny

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  package-lock.json  package.json  tsconfig.castle.json
attendants/: index.ts  types.ts  useConfig.ts  useDaemonHealth.ts  useIdeas.ts
chancellor/: Cargo.toml  build.rs
chancellor/src/: autostart.rs  config.rs  lib.rs  main.rs  modifiers.rs  server.rs
chancellor/src/modules/: config_mod.rs  daemon_mod.rs  mod.rs
chancellor/tests/: e2e.rs  integration.rs
client/: Cargo.toml
client/src/: lib.rs
cornerstone/: context.ts  index.ts  types.ts  useCastle.ts
court/: index.ts  intents.ts  invalidation.ts  operations.ts  pipelines.ts
courtiers/: Cargo.toml  courtiers.test.ts  courtiers.ts
courtiers/src/: ambassador.rs  artificer.rs  bard.rs  castellan.rs  chamberlain.rs  champion.rs  chronicler.rs  clerk.rs  envoy.rs  interpreter.rs  keeper.rs  lib.rs  magistrate.rs  marshal.rs  mentor.rs  ranger.rs  sage.rs  scout.rs  tailor.rs  treasurer.rs  tribune.rs  vizier.rs  warden.rs  watchman.rs
courtiers/tests/: integration.rs
crownsguard/: cli.ts  index.ts  runtime-guard.test.ts  runtime-guard.ts  validator.test.ts  validator.ts
herald/: Cargo.toml
herald/src/: main.rs  status.rs
orb/: empower.ts  index.ts  sync.ts
prerogative/: Cargo.toml
prerogative/src/: api_json.rs  editor_types.rs  lib.rs  state.rs
sceptor/: discovery.ts  index.ts  injector.ts  mounter.ts  router.ts  scoper.ts
throne/: build.ts  index.html  package-lock.json  package.json  tsconfig.json  uno.config.ts
throne/src/: App.tsx  Shell.tsx  _registry.ts  app.css  castle-init.tsx  chrome.css  hmr.ts  main.tsx
throne/src-tauri/: Cargo.toml  tauri.conf.json
throne/src-tauri/capabilities/: default.json
throne/src-tauri/icons/: icon.icns
throne/src-tauri/src/: commands.rs  daemon.rs  lib.rs  main.rs  protocols.rs  watcher.rs
throne/src/bridge/: omninet.ts
throne/src/chrome/: AddressBar.tsx  CircleButton.tsx  CrownMenu.tsx  Dock.tsx  TabBar.tsx  TrafficLights.tsx
throne/src/stores/: identity.ts
vizier/: doc-manager.ts  index.ts  provider-manager.ts  provider.ts  session-store.ts  types.ts  useVizier.ts
