[package]
name = "prerogative"
version = "0.1.0"
edition = "2021"
description = "The Chancellor's prerogative — shared authority types for the Castle"

[dependencies]
# Equipment — the nervous system (Phone, Email, Contacts, Pager, Communicator)
equipment = { path = "../../Omninet/Equipment" }

# Omnibus runtime
omnibus = { path = "../../Omninet/World/Digital/Omnibus", default-features = false, features = ["upnp"] }

# Tower — always-on network node
tower = { path = "../../Omninet/World/Digital/Tower" }

# Globe — OmniEvent, StoreStats
globe = { path = "../../Omninet/Globe", default-features = false }

# Crown — identity types
crown = { path = "../../Omninet/Crown" }

# Content pipeline
ideas = { path = "../../Omninet/Ideas" }
vault = { path = "../../Omninet/Vault" }
x = { path = "../../Omninet/X" }

# Serialization
serde_json = "1"
base64 = "0.22"

# UUIDs for EditorSession, API JSON
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
