[package]
name = "throne"
version = "0.1.0"
edition = "2021"
description = "Omninet browser shell"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
chancellor-client = { path = "../../client" }
notify = "7"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSObject"] }
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSView", "NSColor", "NSResponder"] }
objc2-quartz-core = { version = "0.3", features = ["CALayer"] }
